--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^15.1.0",
     "react-native": "0.27.2",
+    "react-native-file-download": "0.0.10",
     "react-native-fs": "^1.5.1",
     "react-native-pdf-view": "^0.3.2",
     "react-native-router-flux": "^3.30.0",
